--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,7 +16,7 @@
 
   <!-- ************************************************************
 
-                          SIGN UP PAGE
+  SIGN UP PAGE
 
   ************************************************************ -->
 
@@ -29,7 +29,9 @@
     </section>
 
 
-    <form action="/signup" method="POST">
+    <form action="/signup" method="POST" enctype="multipart/form-data">
+    <!-- <form action="/signup" method="POST"> -->
+
       <div>
         <p class="label"> First Name:</p>
         <input class="first-name" type="text" name="firstname" value="" placeholder="First name">
@@ -77,14 +79,11 @@
       </div>
 
 
-
-
       <div>
         <label for="photograph">Shoot your shot:</label>
-        <input class="pic1" type="file" id="photograph" name="photo1" accept="image/png, image/jpeg">
-        <input class="pic1" type="file" id="photograph" name="photo2" accept="image/png, image/jpeg">
+        <input class="pic1" type="file" id="photograph1" name="portfolio" accept="image/png, image/jpeg" multiple>
       </div>
-       <button class="signup-button" type="submit" name="button">I'm ready,sign me up!</button>
+      <button class="signup-button" type="submit" name="button">I'm ready,sign me up!</button>
     </form>
 
   </section>
