--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,36 +23,26 @@
 
     <section class="login-pic"> <i class="fas fa-camera-retro"></i></section>
 
-<!-- <form action="/profilea" method="POST">
-  <input type="text" name="username" value="" placeholder="Enter Username">
-  <input type="password" name="password" value="" placeholder="Enter Password">
-  <a href="/portfolio"><button type="button" name="button">Sign in</button></a>
-    <a href="/signup">Don't have an account? Sign up!</a>
-</form> -->
+    <form action="/login" method="post">
+        <div class="form-group">
+            <label>Email</label>
+            <input type="text" class="form-control" name="email"/>
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="password" name="password"/>
+        </div>
 
-
-<form action="/mainpage" method="post">
-    <div class="form-group">
-        <label>Email</label>
-        <input type="text" class="form-control" name="email">
-    </div>
-    <div class="form-group">
-        <label>Password</label>
-        <input type="password" class="password" name="password">
-    </div>
-
-    <a href=/portfolio><button type="button">Log in</button></a>
-      <a href="/signup">Don't have an account? Sign up!</a>
-</form>
-
-
-
+        <button type="submit">Log in</button>
+          <a href="/signup">Don't have an account? Sign up!</a>
+    </form>
   </section>
 
 
   <footer>
     <p>Photo by:
-      <a class="photo-cred" href="http://atranphoto.com">Alexander Tran</a></p>
+      <a class="photo-cred" href="http://atranphoto.com">Alexander Tran</a>
+    </p>
   </footer>
 
 
